Remove png files and restore README.md